[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "jinja2>=3.1.6",
    "numpy>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "python-levenshtein>=0.27.1",
    "streamlit>=1.45.1",
]
